fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ img {
 }
 svg {
 	z-index: 1;
-	margin-left:5px;
+	margin-left:0.35%;
 }
 path {
 	opacity: 1;
